@@ -3,6 +3,14 @@ What's New in IDLE 1.2a0?
 
 *Release date: XX-XXX-2005*
 
+- Discourage using an indent width other than 8 when using tabs to indent
+  Python code.
+
+- Restore use of EditorWindow.set_indentation_params(), was dead code since
+  Autoindent was merged into EditorWindow.
+
+- Add Tabnanny check before Run/F5, not just when Checking module.
+
 - If an extension can't be loaded, print warning and skip it instead of
   erroring out.
 
